[@mantine/core] Scroller: Fix content overflowing under certain conditions

--- a/packages/@mantine/core/src/components/Scroller/Scroller.module.css
+++ b/packages/@mantine/core/src/components/Scroller/Scroller.module.css
@@ -6,6 +6,7 @@
   align-items: center;
   position: relative;
   overflow: hidden;
+  max-width: 100%;
 }
 
 .container {
